alb-ingress/ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller-clusterip
  namespace: models
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx-cluster-ip
    app.kubernetes.io/part-of: ingress-nginx
    app.kubernetes.io/version: 1.12.0
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
    - name: https
      protocol: TCP
      port: 443
      targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  type: ClusterIP
  sessionAffinity: None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  internalTrafficPolicy: Cluster
