alb-ingress/ingress/ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rules
  namespace: models
    annotations:     
      alb.ingress.kubernetes.io/load-balancer-name: main-ingress
      alb.ingress.kubernetes.io/target-type: instance
      alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: my.models.com
      http:
        paths:
          - path: /malaria
            pathType: Exact
            backend:
              service:
                name: eos-demo-service
                port:
                  number: 80
          - path: /nginx
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
