alb-ingress/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/load-balancer-name: ersilia-nginx-ingress
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: ingress-nginx-controller
              port: 
                number: 80
